Bug 479664 - [Animation curves] "Add scalar keyframe" doesn't interpolate
Summary: [Animation curves] "Add scalar keyframe" doesn't interpolate
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-11 19:26 UTC by paleh
Modified: 2024-02-28 18:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description paleh 2024-01-11 19:26:25 UTC
STEPS TO REPRODUCE
1.  Create a non-empty paint layer, add a transform mask to it.
2.  Add 2 keyframes to the mask in the animation curves docker such that there's at least 1 frame between the two.
3.  Select the frame (time) between the two keyframes and press the button "Add keyframe to control scalar property"

OBSERVED RESULT
The values of the keyframe added in step 3 copy the ones of the preceding frame.

EXPECTED RESULT
The values of the keyframe are linearly interpolated between the values of the surrounding keyframes.
Note: the result is as expected if at step 3, instead of pressing the button, we create the keyframe via the transform tool.

SOFTWARE/OS VERSIONS
Linux: Ubuntu 22.04
Qt Version: 5.15.7
Appimage

ADDITIONAL INFORMATION
git-b034513065 (today's nightly)
regression compared to 5.2.2
This was present at least as early as 5ffd6bebd0 (and so, unrelated to today's and yesterday's patches for animation curves)
Comment 1 Dmitry Kazakov 2024-01-16 14:11:42 UTC
Git commit fdb6edecf81262fade4b3f4c0257a161dd333231 by Dmitry Kazakov.
Committed on 16/01/2024 at 14:50.
Pushed by dkazakov into branch 'master'.

Fix new scalar frames to use interpolated values

M  +1    -1    plugins/dockers/animation/KisAnimCurvesDocker.cpp
M  +1    -1    plugins/dockers/animation/KisAnimUtils.cpp

https://invent.kde.org/graphics/krita/-/commit/fdb6edecf81262fade4b3f4c0257a161dd333231
Comment 2 Dmitry Kazakov 2024-02-28 18:09:41 UTC
Git commit 5a470a59d2b1af03ef7e14e3315595f6a00ef66a by Dmitry Kazakov.
Committed on 28/02/2024 at 12:54.
Pushed by dkazakov into branch 'kazakov/for-5.2'.

Fix new scalar frames to use interpolated values

M  +1    -1    plugins/dockers/animation/KisAnimCurvesDocker.cpp
M  +1    -1    plugins/dockers/animation/KisAnimUtils.cpp

https://invent.kde.org/graphics/krita/-/commit/5a470a59d2b1af03ef7e14e3315595f6a00ef66a