Fix new scalar frames to use interpolated values

BUG:479664